# Vespucci

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  Vespucci.pro  VespucciLibrary.pro  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  analysisdialog.cpp  analysisdialog.h  analysisdialog.ui  analysisresults.cpp  analysisresults.h  analysiswizard.cpp  analysiswizard.h  analysiswizard.ui  appveyor.yml  arma_ext.cpp  arma_ext.h  bandratiodialog.cpp  bandratiodialog.h  bandratiodialog.ui  baselinedialog.cpp  baselinedialog.h  baselinedialog.ui  binaryimport.cpp  binaryimport.h  booleanizedialog.cpp  booleanizedialog.h  buildall.pro  citationdialog.cpp  citationdialog.h  citationdialog.ui  classtest.pro  classtest.pro.user.7d8fb4f  classtest.pro.user.d553a14.2.7pre1  copymaclibs.sh  (+126 more)
GUI/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_BACKUP_15028.cpp  mainwindow_LOCAL_15028.cpp  mainwindow_REMOTE_15028.cpp  scriptdialog.cpp  scriptdialog.h  scriptdialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
Global/: enums.h  global.cpp  global.h  vespucci.cpp  vespucci.h  vespucciworkspace.cpp  vespucciworkspace.h
Math/: VespucciMath.h
Test/: Test.pro  main.cpp  test.cpp  test.h  test_dataset_stitching.cpp  test_ols.cpp  test_peak_finding.cpp  test_quantification.cpp  test_smoothing.cpp  testahca.cpp  testahca.h  testdatamodel.cpp  testdatamodel.h  testdataset.cpp  testdataset.h  testfileio.cpp  testfileio.h  testfitting.cpp  testfitting.h  testhelpers.cpp  testhelpers.h  testnormalization.cpp  testnormalization.h  testpeakfinding.cpp  testpeakfinding.h  testquantification.cpp  testquantification.h  testsession.cpp  testsession.h  testsmoothing.cpp  (+3 more)
Vespucci/: CMakeLists.txt  Vespucci.pro  main.cpp  qcustomplot.cpp  qcustomplot.h  resources.qrc  vespuccilogo.icns
Vespucci/Data/: CMakeLists.txt
Vespucci/Data/Analysis/: CMakeLists.txt  abstractdataanalyzer.cpp  abstractdataanalyzer.h  analysisresults.cpp  analysisresults.h  genericanalysisresults.cpp  genericanalysisresults.h  matrixanalyzer.cpp  matrixanalyzer.h  metaanalyzer.cpp  metaanalyzer.h  mlpackpcadata.cpp  mlpackpcadata.h  multianalyzer.cpp  multianalyzer.h  plsdata.cpp  plsdata.h  principalcomponentsdata.cpp  principalcomponentsdata.h  univariatedata.cpp  univariatedata.h  vcadata.cpp  vcadata.h
Vespucci/Data/Dataset/: CMakeLists.txt  macroparser.cpp  macroparser.h  metadataset.cpp  metadataset.h  vespuccidataset.cpp  vespuccidataset.h
Vespucci/Data/Imaging/: CMakeLists.txt  mapdata.cpp  mapdata.h
Vespucci/Data/Import/: datasetloader.cpp  datasetloader.h  datasetsaver.cpp  datasetsaver.h  textimportqpd.cpp  textimportqpd.h
Vespucci/GUI/: CMakeLists.txt  macrodialog.cpp  macrodialog.h  macrodialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pythonshelldialog.cpp  pythonshelldialog.h  pythonshelldialog.ui  scriptdialog.cpp  scriptdialog.h  scriptdialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
Vespucci/GUI/Analysis/: CMakeLists.txt  ahcadialog.cpp  ahcadialog.h  ahcadialog.ui  bandratiodialog.cpp  bandratiodialog.h  bandratiodialog.ui  classicalleastsquaresdialog.cpp  classicalleastsquaresdialog.h  classicalleastsquaresdialog.ui  dimensionalityestimationdialog.cpp  dimensionalityestimationdialog.h  dimensionalityestimationdialog.ui  haspeaksdialog.cpp  haspeaksdialog.h  haspeaksdialog.ui  hypothesistestdialog.cpp  hypothesistestdialog.h  hypothesistestdialog.ui  kmeansdialog.cpp  kmeansdialog.h  kmeansdialog.ui  metaanalysisdialog.cpp  metaanalysisdialog.h  metaanalysisdialog.ui  multianalysisdialog.cpp  multianalysisdialog.h  multianalysisdialog.ui  peakfindingdialog.cpp  peakfindingdialog.h  peakfindingdialog.ui  plotmakerdialog.cpp  plotmakerdialog.h  plotmakerdialog.ui  plsdialog.cpp  plsdialog.h  plsdialog.ui  principalcomponentsdialog.cpp  principalcomponentsdialog.h  principalcomponentsdialog.ui  (+12 more)
Vespucci/GUI/Display/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  citationdialog.cpp  citationdialog.h  citationdialog.ui  colorrangedialog.cpp  colorrangedialog.h  colorrangedialog.ui  dataviewer.cpp  dataviewer.h  dataviewer.ui  datawidget.cpp  datawidget.h  datawidget.ui  globalgradientdialog.cpp  globalgradientdialog.h  globalgradientdialog.ui  historydialog.cpp  historydialog.h  historydialog.ui  mapdialog.cpp  mapdialog.h  mapdialog.ui  mapplot.cpp  mapplot.h  mapresizedialog.cpp  mapresizedialog.h  mapresizedialog.ui  mapviewer.cpp  mapviewer.h  mapviewer.ui  plotviewer.cpp  plotviewer.h  plotviewer.ui  plotwidget.cpp  plotwidget.h  plotwidget.ui  reportmessagedialog.cpp  (+17 more)
Vespucci/GUI/Processing/: CMakeLists.txt  abscissainterpolationdialog.cpp  abscissainterpolationdialog.h  abscissainterpolationdialog.ui  abscissatransformdialog.cpp  abscissatransformdialog.h  abscissatransformdialog.ui  baselinedialog.cpp  baselinedialog.h  baselinedialog.ui  binarizedialog.cpp  binarizedialog.h  binarizedialog.ui  booleanizedialog.cpp  booleanizedialog.h  booleanizedialog.ui  bulkconversiondialog.cpp  bulkconversiondialog.h  bulkconversiondialog.ui  cropdialog.cpp  cropdialog.h  cropdialog.ui  dataextractordialog.cpp  dataextractordialog.h  dataextractordialog.ui  datasetextractordialog.cpp  datasetextractordialog.h  datasetextractordialog.ui  datasetimportdialog.cpp  datasetimportdialog.h  datasetimportdialog.ui  filterdialog.cpp  filterdialog.h  filterdialog.ui  fouriertransformdialog.cpp  fouriertransformdialog.h  fouriertransformdialog.ui  loaddataset.cpp  loaddataset.h  loaddataset.ui  (+24 more)
Vespucci/GUI/QAbstractItemModel/: CMakeLists.txt  datasetlistmodel.cpp  datasetlistmodel.h  datasettreemodel.cpp  datasettreemodel.h  filetablemodel.cpp  filetablemodel.h  maplistmodel.cpp  maplistmodel.h  spectratablemodel.cpp  spectratablemodel.h  treeitem.cpp  treeitem.h  vespuccitablemodel.cpp  vespuccitablemodel.h
Vespucci/Global/: CMakeLists.txt  datamodel.cpp  datamodel.h  global.cpp  global.h  tcprequesthandler.cpp  tcprequesthandler.h  vespucciworkspace.cpp  vespucciworkspace.h
Vespucci/toolbar_icons/: credits.txt
(+1539 files in other folders)
